--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pip install selenium
-pip install pandas
-pip install openpyxl
-pip install matplotlib
-pip install XlsxWriter
+matplotlib==3.9.0
+openpyxl==3.1.2
+pandas==2.2.2
+selenium==4.21.0
+xlsxwriter==3.2.0
 pip install tk
